--- a/Regular/300 E/Group 10/group_list.html
+++ b/Regular/300 E/Group 10/group_list.html
@@ -21,10 +21,10 @@
         </thead>
         <tbody>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>5201040499</td>
+                <td>Owusu Kyereme Prosper</td>
+                <td>prosperowusu121@gmail</td>
+                <td>0544147414</td>
             </tr>
         </tbody>
     </table>
